syntax = "proto3";
package grpcform;
option go_package = "grpcform";

service FormService {
    rpc GetForm(GetFormRequest) returns (Form) {}
    rpc ValidateForm(Form) returns (Form) {}
    rpc SendForm(Form) returns (SendFormResponse) {}
}

message GetFormRequest {
    string name = 1;
}

message SendFormResponse {
    Form form = 1;
    bool succeed = 2;
    string message = 3;
}

message Form {
    string name = 1;
    repeated Field fields = 2;
    repeated Button buttons = 3;
    bool valid = 4;
}

message Field {
    string label = 1;
    Status status = 2;
    bool instant_validate = 3;
    string error = 4;
    TextField text_field = 10;
    SelectField select_field = 11;
    NumericField numeric_field = 12;
    ActiveIf activeIf = 20;
    RequiredIf required_if = 21;
    DisabledIf disabled_if = 22;
    HiddenIf hidden_if = 23;
}

enum Status {
    STATUS_UNSPECIFIED = 0;
    ACTIVE = 1;
    REQUIRED = 2;
    DISABLED = 3;
    HIDDEN = 4;
}

message ActiveIf {
    repeated Validator validators = 1;
}

message RequiredIf {
    repeated Validator validators = 1;
}

message DisabledIf {
     repeated Validator validators = 1;
}

message HiddenIf {
    repeated Validator validators = 1;
}

message Validator {
    int64 index = 1;
    string equal_text = 10;
    int64 smaller_than_length = 11;
    int64 greter_than_length = 12;
    int64 equal_number = 20;
    int64 smaller_than_number = 21;
    int64 greater_than_number = 22;
    Option equal_option = 30;
    string regex = 40;
}

message TextField {
    string value = 1;
    repeated Option options = 2;
    int64 min = 10;
    string min_error = 20;
    int64 max = 11;
    string max_error = 21;
    string regex = 12;
    string regex_error = 22;
}

message SelectField {
    Option option = 1;
    SelectType type = 2;
    repeated Option options = 3;
    string error = 4;
}

enum SelectType {
    SELECT_TYPE_UNSPECIFIED = 0;
    SIMPLE = 1;
    MULTI = 2;
}

message NumericField {
    int64 value = 1;
    int64 step = 2;
    int64 min = 10;
    string min_error = 20;
    int64 max = 11;
    string max_error = 21;
}

message Option {
    int64 index = 1;
    string value = 2;
}

message Button {
    string label = 1;
    Status status = 2;
    ButtonFuncType type = 3;
}

enum ButtonFuncType {
    BUTTON_FUNC_UNSPECIFIED = 0;
    VALIDATE = 1;
    RESET = 2;
    SEND = 3;
}
